# AutoMedia

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  opencode.json  pyproject.toml
.claude/: rules.md  settings.json
.claude/skills/: README.md  brand-strategy.md
.codex/skills/: README.md  doc-sync.md  project-validation.md
.cursor/: mcp.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  labeler.yml  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  conventional-commits.yml  docs.yml  nightly.yml  publish.yml  release-please.yml  sbom.yml  stale.yml
.omo/evidence/: task-4-image-fallback.txt  task-4-image-llm.txt
.opencode/skills/: README.md
20260711_test-topic/: 00_project_info.json
20260712_test-topic/: 00_project_info.json
20260713_test-topic/: 00_project_info.json
PRD/: PRD-1-AutoMedia通用化.md  PRD-2-Omni三件套集成.md  PRD-3-商用一站式solution-wise.md  README.md  产品分析文档.md
automedia/: __init__.py  __main__.py
automedia/adapters/: __init__.py  publish_engine.py  registry.py
automedia/asset_library/: db.py  ingest.py  migrate.py  search.py  vector_store.py
automedia/cli/: __init__.py  app.py
automedia/core/: __init__.py  compat_scanner.py  config_loader.py  credential_loader.py  doctor.py  llm_client.py  overrides.py  project.py
automedia/cron/: jobs.yaml
automedia/decision/: __init__.py  audit.py  base.py  build.py  dependency.py  diagnostic.py  orchestrator.py  preflight.py  schema_validator.py
automedia/gates/: __init__.py  archive_validation.py  base.py  brand_cta.py  content_semantic.py  content_writer.py  copy_review.py  fact_check.py  failure_modes.py  html_hard.py  humanizer.py  lint.py  mp3_vs_srt.py  platform_integrity.py  pre_send_whisper.py  publish_log_schema.py  six_step_hard.py  subtitle_render.py  topic_selection.py  translation_quality.py  tts_brand_asset.py  vision_qa.py  wechat_checklist.py
automedia/hitl/: config.py  executor.py
automedia/hooks/: md5_tracker.py  metrics.py  protocol.py
automedia/license/: __init__.py  manager.py  verifier.py
automedia/manifests/: __init__.py  brand_profile_schema.py  defaults.yaml  model_config_schema.py  omni_allowlist_template.yaml  omni_config_template.yaml
automedia/mcp/: __init__.py  mcp_allowlist.yaml  parallel.py  server.py
automedia/omni/: __init__.py  allowlist.py  artifact_mapping.py  base.py  config.py  md5_integration.py  ol_adapter.py  opp_adapter.py  orf_adapter.py  registry.py
automedia/pipelines/: __init__.py  audio_pipeline.py  gate_engine.py  image_pipeline.py  language_config.py  runner.py
automedia/platform/: __init__.py  xiaohongshu.py  zhihu_draft.py
automedia/pool/: __init__.py  collector.py  db.py  dedup.py  scorer.py
automedia/sop/: __init__.py  runner.py
automedia/tenant/: __init__.py  audit.py  manager.py  rbac.py
deploy/logrotate/: automedia
deploy/systemd/: automedia-cron.service  automedia-cron.timer  automedia-mcp.env  automedia-mcp.service  automedia-pipeline.env  automedia-pipeline.service  healthcheck.sh
docs/: PRD-4.md  agent-orientation-analysis.md  agent-troubleshooting.md  api-reference.md  asset-library.md  automedia-validation-master-plan.md  cli-reference.md  coverage-gaps.md  d3-gap-analysis.md  decision-layer.md  developer-guide.md  enforcement-mechanisms.md  hermes-coupling-checklist.md  hitl-framework.md  index.md  mcp-setup.md  mcp-systemd-setup.md  migration-guide.md  omni-integration.md  open-core.md  prd-1-verification-summary.md  project-audit.md  sop-runner.md
docs/archive/: coverage-gaps.md
docs/archived/: AGENT_QUICKSTART.md  PRD-4.md  error-code-reference.md  mcp-systemd-setup.md
docs/dev/: PRD-4.md  agent-orientation-analysis.md  agent-troubleshooting.md  api-gotchas.md  cron-troubleshooting.md  developer-guide.md  enforcement-mechanisms.md  evaluation-matrix-principles.md  forward-compat.md  founder-expectations.md  gate-failure-modes.md  override-reference.md  project-audit.md  project-validation-framework.md  video-synthesis-design.md
docs/runbook/: api-gotchas.md  cron-troubleshooting.md  gate-failure-modes.md  production-workflow.md
docs/user/: api-reference.md  asset-library.md  cli-reference.md  deployment.md  hitl-framework.md  mcp-setup.md  omni-integration.md  production-workflow.md  user-introduction.md  windows-deployment.md
scripts/: dead-code.sh  doctor.sh  mcp-server.sh  run-tests.sh  setup.ps1  setup.sh  verify-omni-packages.py
solution-wise/process/: dependency-graph.yaml
src/automedia/: .vulture_whitelist.py  __init__.py  __main__.py  _version.py  exceptions.py
tests/: conftest.py  manual_qa_f3.py  mock_llm.py  test_adapter_registry.py  test_archive_validation.py  test_audio_pipeline.py  test_brand_cta.py  test_brand_profile_schema.py  test_brand_profiles.py  test_collector.py  test_compat_scanner.py  test_config_loader.py  test_content_semantic.py  test_copy_review.py  test_credential_loader.py  test_cron_jobs.py  test_dedup.py  test_doctor.py  test_fact_check.py  test_failure_modes.py  test_feishu_notifier.py  test_gate_base.py  test_gate_engine.py  test_gate_hooks.py  test_gate_retry.py  test_html_hard.py  test_humanizer.py  test_image_pipeline.py  test_lint.py  test_llm_client.py  test_md5_tracker.py  test_mock_llm.py  test_model_config_schema.py  test_mp3_vs_srt.py  test_overrides.py  test_overrides_integration.py  test_paths.py  test_platform_integrity.py  test_pool_db.py  test_pre_send_whisper.py  (+15 more)
tests/test_accounts/: __init__.py  conftest.py  test_registry.py  test_session.py  test_store.py
tests/test_adapters/: test_base_adapter.py
tests/test_asset_library/: conftest.py  test_db.py  test_ingest.py  test_init.py  test_migrate.py  test_search.py  test_vector_store.py
tests/test_cli/: conftest.py  test_account_cli.py  test_cli.py  test_doctor_fix.py  test_history_cmd.py  (+7 more)
(+405 files in other folders)
