[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automedia"
version = "1.0.0"
description = "Automated media production pipeline"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "pydantic>=2",
    "pyyaml>=6",
    "tenacity>=8",
    "Pillow>=10",
]

[project.optional-dependencies]
openai = ["openai>=1"]
anthropic = ["anthropic>=0.30"]
httpx = ["httpx>=0.27"]
rich = ["rich>=13"]
mcp = ["mcp"]

omni-core = ["lxml>=6", "python-docx>=1.2", "python-pptx>=1.0", "openpyxl>=3.1", "pandas>=2"]
omni-pdf = ["pymupdf>=1.24"]
omni-ml = ["sentence-transformers>=3", "torch>=2"]
omni = ["automedia[omni-core]", "automedia[omni-pdf]", "automedia[omni-ml]",
        "omni-pre-processor>=0.9,<1.0", "omni-localizer>=0.7,<1.0", "omni-re-formatter>=0.4,<1.0"]

[project.entry-points.console_scripts]
automedia = "automedia.cli.app:app"

[tool.setuptools.packages.find]
include = ["automedia*"]
