[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automedia"
description = "Automated media production pipeline"
dynamic = ["version"]
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "1StepMore"}]
keywords = ["media", "automation", "pipeline", "mcp", "cli", "video", "content"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.md"

dependencies = [
    "typer>=0.9",
    "pydantic>=2",
    "pyyaml>=6.0.2",
    "tenacity>=8",
    "Pillow>=10",
    "typing_extensions>=4.12",
    "cryptography>=41",
    "structlog>=24",
]

[project.urls]
Homepage = "https://github.com/1stepmore/automedia"
Repository = "https://github.com/1stepmore/automedia"
Documentation = "https://github.com/1stepmore/automedia/tree/main/docs"

[project.optional-dependencies]
openai = ["openai>=1"]
anthropic = ["anthropic>=0.30"]
httpx = ["httpx>=0.27"]
rich = ["rich>=13"]
mcp = ["mcp>=1.0"]

omni-core = ["lxml>=6", "python-docx>=1.2", "python-pptx>=1.0", "openpyxl>=3.1", "pandas>=2"]
omni-pdf = ["pymupdf>=1.24"]
omni-ml = ["sentence-transformers>=3", "torch>=2"]
omni = ["automedia[omni-core]", "automedia[omni-pdf]", "automedia[omni-ml]",
        "omni-pre-processor>=0.9,<1.0", "omni-localizer>=0.7,<1.0", "omni-re-formatter>=0.4,<1.0"]
dev = [
    "automedia[openai]",
    "automedia[anthropic]",
    "automedia[httpx]",
    "automedia[rich]",
    "automedia[mcp]",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.15.21",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "vulture>=2.10",
    "hypothesis>=6.156.5",
]

[project.entry-points.console_scripts]
automedia = "automedia.cli.app:app"

[tool.setuptools.dynamic]
version = {attr = "automedia._version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["automedia", "automedia.*"]

[tool.setuptools.package-data]
automedia = ["**/*.yaml", "**/*.j2"]

[tool.uv]
environments = [
    "python_version >= '3.13'",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "S", "SIM", "ANN"]

[tool.ruff.lint.per-file-ignores]
"src/automedia/.vulture_whitelist.py" = ["F821", "B018", "N999"]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true

[tool.vulture]
paths = ["src/automedia/"]
min_confidence = 80

[tool.deptry]
exclude = ["tests/", "scripts/", "deploy/"]
per_rule_ignores = {DEP002 = ["automedia"]}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
