[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automedia-pipeline"
description = "Automated media production pipeline"
dynamic = ["version"]
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "1StepMore"}]
keywords = ["media", "automation", "pipeline", "mcp", "cli", "video", "content"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.md"

dependencies = [
    "python-dotenv>=1.0",
    "typer>=0.9,<1",
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2,<3",
    "pyyaml>=6.0.2",
    "tenacity>=8",
    "Pillow>=10,<12",
    "typing_extensions>=4.12",
    "cryptography>=44.0.1,<45",
    "structlog>=24,<27",
    "jinja2>=3.1",
]

[project.urls]
Homepage = "https://github.com/1stepmore/automedia"
Repository = "https://github.com/1stepmore/automedia"
Documentation = "https://github.com/1stepmore/automedia/tree/main/docs"

[project.optional-dependencies]
openai = ["openai>=2.45.0"]
anthropic = ["anthropic>=0.116.0"]
rich = ["rich>=15.0.0"]
mcp = ["mcp>=1.0"]

omni-core = ["lxml>=6", "python-docx>=1.2", "python-pptx>=1.0", "openpyxl>=3.1", "pandas>=2"]
omni-pdf = ["pymupdf>=1.24"]
omni-ml = ["sentence-transformers>=3", "torch>=2.13.0"]
omni = ["automedia-pipeline[omni-core]", "automedia-pipeline[omni-pdf]", "automedia-pipeline[omni-ml]",
        "omni-pre-processor>=0.5.8,<1.0", "omni-localizer>=0.7,<1.0", "omni-re-formatter>=0.4,<1.0"]
dev = [
    "automedia-pipeline[openai]",
    "automedia-pipeline[anthropic]",
    "automedia-pipeline[httpx]",
    "automedia-pipeline[rich]",
    "automedia-pipeline[mcp]",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.15.21",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "vulture>=2.10",
    "hypothesis>=6.156.5",
    "interrogate>=1.7",
    "pytest-timeout>=2.3",
]

[project.entry-points.console_scripts]
automedia = "automedia.cli.app:app"

[tool.setuptools.dynamic]
version = {attr = "automedia._version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["automedia", "automedia.*"]

[tool.setuptools.package-data]
automedia = ["**/*.yaml", "**/*.j2", "**/*.html", "**/*.json"]

[tool.uv]
environments = [
    "python_version >= '3.13'",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "S", "SIM", "ANN"]

[tool.ruff.lint.per-file-ignores]
"src/automedia/.vulture_whitelist.py" = ["F821", "B018", "N999"]
"tests/**" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_configs = true

[tool.vulture]
paths = ["src/automedia/"]
min_confidence = 80

[tool.deptry]
exclude = ["tests/", "scripts/", "deploy/"]
per_rule_ignores = {DEP002 = ["automedia"]}

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
fail-under = 50
exclude = ["tests", "scripts", ".venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short -m 'not e2e' --timeout=120 --timeout-method=thread --strict-markers"
